# Polynomial-Line-Smoothing

./: CMakeLists.txt  README.md
src/: ComputeDerivative.hpp  ComputeDerivative.inl  ComputeDerivative.inl.unused  Main.cpp  Misc.cpp  Misc.hpp  Misc.inl  Polynomial.hpp  Polynomial.inl  Solve.hpp  Test.cpp
